--- a/bin/weasyprint.css
+++ b/bin/weasyprint.css
@@ -1,5 +1,5 @@
 /*
- * last modified 2018-09-01
+ * last modified 2018-12-15
  * Dorai Sitaram
  */
 
@@ -16,6 +16,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 #footer {
+  display: none;
   padding-top: 1.25em;
   padding-bottom: 1.25em;
 }
